--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
-requirements.txt found, instead of Pipfile! Converting…
-Warning: Your Pipfile now contains pinned versions, if your requirements.txt did. 
-We recommend updating your Pipfile to specify the "*" version, instead.
--i https://pypi.org/simple
-
+bidict==0.22.0
+cffi==1.15.1
+click==8.1.3
+colorama==0.4.5
+dnspython==2.2.1
+eventlet==0.33.1
+Flask==2.1.2
+Flask-Login==0.6.1
+Flask-SocketIO==5.2.0
+greenlet==1.1.2
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pycparser==2.21
+pymongo==4.1.1
+python-dotenv==0.20.0
+python-engineio==4.3.3
+python-socketio==5.2.0
+six==1.16.0
+Werkzeug==2.1.2
+zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
